commit Revisian selanjutnya

--- a/evaluasi_html.html
+++ b/evaluasi_html.html
@@ -18,7 +18,7 @@
     <p class="center-text">Halaman ini bertujuan untuk menguji dan mengevaluasi pemahaman dasar tentang struktur HTML dan elemen-elemennya.</p>
 
     <h2 class="center-text">Pengelolaan Teks</h2>
-    <p class="center-text">Penting untuk memahami bagaimana <strong>teks tebal</strong> dan <em>teks miring</em> digunakan dalam HTML. Ini membantu dalam menekankan bagian tertentu dari teks yang perlu diperhatikan oleh pembaca.</p>
+    <p>Penting untuk memahami bagaimana teks tebal seperti<strong> selamat datang di web HTML</strong> dan teks miring seperti<em> selamat datang di web HTML</em> digunakan dalam HTML. Ini membantu dalam menekankan bagian tertentu dari teks yang perlu diperhatikan oleh pembaca.</p>
 
     <hr>
 
@@ -27,7 +27,7 @@
     </blockquote>
 
     <h2 class="center-text">Hyperlink dan Gambar</h2>
-    <p class="center-text">Kunjungi <a href="https://id.wikipedia.org/wiki/Sejarah_Indonesia">situs web ini</a> untuk menemukan informasi yang menarik dan berguna.</p>
+    <p class="center-text">Kunjungi <a href="https://id.wikipedia.org/wiki/Sejarah_Indonesia">situs web ini</a> untuk menemukan informasi mengenai sejarah Indonesia.</p>
 
         <a class="center-image" href="https://en.wikipedia.org/wiki/en:Nicolaes_Visscher_II">
             <img class="center-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Nicolaes_Visscher_Indiae_Orientalis.jpg/800px-Nicolaes_Visscher_Indiae_Orientalis.jpg" alt="Indiae Orientalis, 17th century map by by Nicolaes Visscher II">
