commit Revisian keenam2

--- a/latihan_js.html
+++ b/latihan_js.html
@@ -14,7 +14,7 @@
 
     <!-- JavaScript Internal -->
     <script>
-        document.write('<p>Selamat datang di latihan JavaScript</p>');
+        document.write('<p>Latihan JavaScript Selesai</p>');
     </script>
 
     <!-- JavaScript Eksternal -->
